# ZXWAIFM

aifm/: CMakeLists.txt  Makefile  build.sh  cmake_build.sh  run_test.sh
aifm/configs/: ssh
aifm/exp/array_access/aifm/: main.cpp  run.sh
aifm/exp/fig11a/aifm/: main.cpp
aifm/exp/fig11a/linux_mem/: main.cpp
aifm/exp/fig7/: setup_input.sh
aifm/exp/fig8/no_offload/: run.sh
aifm/exp/fig8/offload_copy/: run.sh
aifm/exp/fig8/offload_copy_shuffle/: run.sh
aifm/exp/fig8/offload_copy_shuffle_agg/: run.sh
aifm/exp/prefetch_t1/aifm/: generate.sh  gmain.cpp  main.cpp  trend.hpp  trend.txt  trend_generator.hpp  trend_reader.hpp  trend_writer.hpp
aifm/exp/pushdown_t1/aifm/: main.cpp  run.sh
aifm/inc/: array.hpp  boyer_moore_vote.hpp  cache.hpp  cache_impl.hpp  cost_estimator.hpp  device.hpp  lru_cache.hpp  manager.hpp  pointer.hpp  prefetcher.hpp  prefetcher_leap.hpp  prefetcher_lr.hpp  rpc_buffer.hpp  rpc_coding.hpp  rpc_protocol.hpp  rpc_router.hpp  rpc_serialize_macro.hpp  rpc_serializer.hpp  rpc_traits.hpp  server.hpp  server_array.hpp  server_ds.hpp  trend_predictor_lr.hpp
aifm/inc/internal/: array.ipp  dataframe_vector.ipp  ds_info.hpp  manager.ipp  prefetcher.ipp  prefetcher_leap.ipp  prefetcher_lr.ipp
aifm/snappy/: snappy-sinksource.h  snappy.cc  snappy.h
aifm/src/: array.cpp  device.cpp  pointer.cpp  server.cpp  server_array.cpp  tcp_device_server.cpp
aifm/test/: test_tcp_list.cpp
shenango/scripts/: setup_machine.sh
